# otus

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: cmake-hw3.yml  cmake-hw5.yml  cmake-tests.yml  cmake.yml  hw2.yml
hw-1/: CMakeLists.txt
hw-1/tests/google_test/: CMakeLists.txt
hw-1/utils/: CMakeLists.txt
hw-2/: CMakeLists.txt  main.cpp  readme.txt
hw-2/utils/: CMakeLists.txt  IpAddress.cpp  IpAddress.h  IpAddresses.cpp  IpAddresses.h
hw-3/: BaseBlocksReader.cpp  BlocksReaderMgr.cpp  BlocksReaderMgr.h  CMakeLists.txt  FixedBlocksReader.h  IObserver.cpp  IObserver.h
hw-5/: CMakeLists.txt  GDescriptor.h  GManager.h  GModel.h  GView.h  GWindow.h  MainWindow.h  main.cpp
hw-5/Elements/: GElement1.h  IGElement.h
hw_3/: BaseBlocksReader.h  DynamicBlocksReader.cpp  DynamicBlocksReader.h  FixedBlocksReader.cpp  main.cpp
tests/: CMakeLists.txt  test_version.cpp
tests/boost_test/: CMakeLists.txt  test_version.cpp
tests/boost_test/hw-1/: CMakeLists.txt  test_version.cpp
tests/google_test/: CMakeLists.txt  main.cpp
tests/google_test/hw-1/: CMakeLists.txt  main.cpp
tests/google_test/hw-2/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  utils.cpp  utils.h  version.h.in
